<resources>
    <string name="app_name">Student Requisites</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_syllabus">Syllabus</string>
    <string name="menu_faculty">Faculty</string>
    <string name="menu_fee">Fee Payment</string>
    <string name="menu_feed">Feedback</string>
    <string name="menu_question">Question Bank</string>
    <string name="menu_exam">Upcoming Exams</string>
    <string name="title_activity_main">MainActivity</string>
</resources>